Fix command palette dark mode
The class names are specified per code host so we shouldn't have to import Bootstrap styles.

Move import order so code-host specific styles can override shared styles.

--- a/client/browser/src/shared/code-hosts/github/style.scss
+++ b/client/browser/src/shared/code-hosts/github/style.scss
@@ -11,6 +11,7 @@
 
 :root {
     // Map out CSS variables to the theme-aware GitHub ones
+    --body-bg: var(--color-bg-canvas);
     --border-color: var(--color-border-primary);
     --secondary: var(--color-auto-gray-2);
 }
